# bookstore

./: Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_acttive_product_active.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category_serialize.py  test_product_serialize.py
product/tests/test_serializers/: test_category_serialize.py  test_product_serialize.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewsetr.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
